k8s/html-js-css-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-js-css-service
spec:
  selector:
    app: html-js-css
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
